--- a/Frontend/src/app/answer-query-page/answer-query-page.component.html
+++ b/Frontend/src/app/answer-query-page/answer-query-page.component.html
@@ -1,8 +1,13 @@
+<p class="img">
+    <img src ={{foto}} alt="Profile Photo" style="border-radius: 50%; width: 80%;">
+</p>
+<div class="uname">
+    <p>{{duname}} </p>
+</div>
 <div class="navbar">
     <button class="b" (click)="searchTab()">Search</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button class="ba">Answer</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button class="b" (click)="logout()">LogOut</button>
 </div>
 <br>
-
 <app-questiontopiclist></app-questiontopiclist>
