--- a/Frontend/src/app/answerlist/answerlist.component.html
+++ b/Frontend/src/app/answerlist/answerlist.component.html
@@ -1,28 +1,34 @@
-    <div *ngIf="len">
-        <div *ngFor="let answer of ansList">
+<div *ngIf="len">
+    <div *ngFor="let answer of ansList; index as i">
         <mat-card class="example-card" style="padding: 3%; background-color: var(--dark); color:var(--ligt);">
             <mat-card-header>
                 <div mat-card-avatar style="background-image: url({{answer.aphoto}});
                 background-size: cover;"></div>
                 <mat-card-title><em>{{answer.user}}</em> </mat-card-title>
                 <div *ngIf="answer.correctAnswer">
-                <button class="ba"><em>Accepted answer</em></button>
+                    <mat-icon style="font-size: 33px;">verified</mat-icon>
                 </div>
             </mat-card-header><br>
             <mat-card-content>
-                {{answer.body}}
-            </mat-card-content><br>
-        
-    <div *ngIf='mark'>
-        <button class='b' (click)='upvote(answer.ansId)'>Mark</button>
+                {{answer.body}} <br> <br><br>
+                <button class="button" (click)="addComment(answer.ansId, i)">Add comment</button> &nbsp;&nbsp;&nbsp;
+                <button class="button" (click)="showcomment(i)">View comments</button> &nbsp;&nbsp;&nbsp;
+                <div *ngIf='mark' style="margin-top: -4.8%; margin-left: 33%;">
+                    <button class="button" (click)='upvote(answer.ansId)'>Mark as correct</button>
+                </div>
+                <div *ngIf="showVar[i]">
+                    <p>
+                        <app-commentlist ansId={{answer.ansId}}></app-commentlist>
+                    </p>
+                </div>
+            </mat-card-content>
+
+        </mat-card><br>
     </div>
-    
-</mat-card><br>
-        </div>
-        </div>
-        
-        <div *ngIf="!len">
-            <span>
-            No one has answered this yet!
-            </span>
-        </div>    
+</div>
+
+<div *ngIf="!len">
+    <span>
+        No one has answered this yet!
+    </span>
+</div>
