--- a/Frontend/src/app/search-query-page/search-query-page.component.css
+++ b/Frontend/src/app/search-query-page/search-query-page.component.css
@@ -49,3 +49,17 @@
         border-bottom: 1px solid var(--dark);
         outline: none;
   }
+  
+  .uname{
+    margin-left: 85%;
+    color: var(--ligt);
+    position: absolute;
+    margin-top: -5%;
+  }
+  
+  .img{
+    position: absolute;
+    margin-left: 83.8%;
+    border-radius: 50%;
+    margin-top: -14%;
+  }
